Swaggerize GET Commit
